# basic-auth

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.migrations/: 0001_table_users.sql  0002_table_sessions.sql  0003_table_deleted_users.sql
common/: Cargo.toml
common/src/: error.rs  generate.rs  lib.rs  mail.rs  oauth.rs  otp.rs  session.rs  user_session.rs  validation.rs
common/src/session/: active_session.rs  db_session.rs  mod.rs  parsed_session.rs  session_crud.rs  session_fns.rs  session_struct.rs
common/src/validation/: image.rs  mod.rs  text.rs  unique.rs
database/: Cargo.toml
database/migrations/: 0001_table_users.sql  0002_table_sessions.sql
database/src/: lib.rs
database/src/active/: mod.rs  update.rs
database/src/applicant/: from_oidc.rs  mod.rs  oidc.rs  recovery.rs  registration.rs  update.rs
database/src/applicants/: mod.rs  post_oidc.rs  pre_oidc.rs  recovering.rs  register.rs  registration.rs  updating.rs
database/src/applications/: mod.rs  post_oidc.rs  pre_oidc.rs  recovering.rs  registration.rs  updating.rs
database/src/bucket/: b2.rs  crud.rs  mod.rs  object_storage.rs  r2.rs
database/src/file_storage/: mod.rs
database/src/mem/: active.rs  applicant.rs  mod.rs  oauth_oidc.rs  openid_connecting.rs  recovering.rs  recovery.rs  verification.rs
database/src/session/: create.rs  delete.rs  mod.rs  read.rs
database/src/sessions/: mod.rs
database/src/unregistered/: mod.rs  register.rs
database/src/user/: create.rs  delete.rs  mod.rs  read.rs  recovery.rs  registration.rs  unregistered.rs  update.rs  update_by_email.rs  update_by_username.rs
database/src/users/: create.rs  delete.rs  mod.rs  read.rs  update_by_email.rs  update_by_username.rs
database/src/verification/: mod.rs
server/: Cargo.toml
server/src/: connection.rs  jwt.rs  lib.rs  stream_drop.rs  sync_db.rs  user_data.rs
server/src/admin/: health.rs  mod.rs
server/src/auth/: logging.rs  login.rs  mod.rs  oauth_google.rs  oidc.rs  recovery.rs  register.rs  session.rs
server/src/middleware/: admin.rs  auth.rs  mod.rs
server/src/session/: mod.rs
server/src/settings/: account.rs  email.rs  metadata.rs  mod.rs  password.rs  phone.rs  recovery.rs  username.rs
server/src/user/: account.rs  mod.rs  profile.rs  recovery.rs  settings.rs
server/tests/: delete_account.rs  finish_oidc.rs  get_user_profile.rs  login_by_email.rs  login_by_username.rs  logout.rs  logout_all.rs  logout_devices.rs  register.rs  reset_password.rs  set_username.rs  update_email.rs  update_metadata.rs  update_password.rs  update_user_profile.rs  update_username.rs
server/tests/common/: mod.rs  printer.rs  scanner.rs
src/: auth.rs  lib.rs  main.rs  profile.rs  settings.rs
src/database/: banned_tokens.rs  mod.rs  registration.rs  unregistered.rs  users.rs
src/models/: mod.rs  user.rs
src/routes/: account.rs  auth.rs  mod.rs  profile.rs  session.rs  settings.rs
src/sessions/: mod.rs
src/utils/: auth_guard.rs  conn_info.rs  error.rs  jwt.rs  mail.rs  mod.rs  validation.rs
util/: Cargo.toml
util/src/: error.rs  lib.rs  mail.rs
util/src/session/: cookie.rs  mod.rs  session_fns.rs
util/src/validation/: image.rs  unique.rs
web/: Cargo.toml
web/src/: conn_info.rs  main.rs
