[package]
name = "restapi"
version = "0.1.0"
edition = "2021"
authors = ["Sumit Modak <sumit.modak.code@gmail.com>"]

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
dotenv = "0.15.0"
mongodb = "3.1.0"
hmac = "0.12.1"
sha1 = "0.10.6"
