[workspace]
resolver = "3"
members = [ "common", "database", "server", "web" ]
exclude = []
default-members = [ "web" ]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sumit Modak <sumit.modak.code@gmail.com>"]
repository = "https://github.com/sumit-ftr/web-boilerplate"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
chrono = "0.4.41"
cookie = { version = "0.18.1", features = ["signed"] }
uuid = "1.18.0"
