[workspace]
resolver = "3"
members = [ "common", "database", "server", "web" ]
exclude = []
default-members = [ "web" ]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sumit Modak <sumit.modak.code@gmail.com>"]
repository = "https://github.com/sumitftr/basic-auth"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
axum       = { version = "0.8", features = ["tokio", "json", "http2"], default-features = false }
base64     = { version = "0.22" }
dotenv     = { version = "0.15" }
hmac       = { version = "0.12" }
lettre     = { version = "0.11" }
moka       = { version = "0.12", features = ["sync"] }
mongodb    = { version = "3.3" }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2       = { version = "0.10" }
tokio      = { version = "1", features = ["full"] }
tower      = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }
tracing    = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid       = { version = "1.18" }
