[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
cookie = { workspace = true }
hmac = "0.12.1"
lettre = "0.11.11"
serde = { workspace = true }
sha1 = "0.10.6"
tracing = { workspace = true }
uuid = { workspace = true }
