[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
const-hex = { workspace = true }
hmac = { workspace = true }
lettre = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }
