[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
common = { path = "../common" }

axum = { workspace = true }
moka = { workspace = true }
mongodb = { workspace = true }
s3 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
