[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
common = { path = "../common" }

axum = { workspace = true }
base64 = { workspace = true }
moka = { workspace = true }
mongodb = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

sha1 = { version = "0.10" }
urlencoding = { version = "2" }
sha2 = { workspace = true }
hmac = { workspace = true }
const-hex = { workspace = true }

[lints]
workspace = true
