[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
common = { path = "../common" }
database = { path = "../database" }

axum = { workspace = true }
axum-extra = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

jsonwebtoken = { version = "10", features = ["rust_crypto"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
tokio = { workspace = true }
