[package]
name = "web"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
common = { path = "../common" }
server = { path = "../server" }

axum = { workspace = true }
dotenv = "0.15.0"
tokio = { workspace = true }
# toml = { version = "0.9.5" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
